
  As a side-effect of this the docstring is no longer writeable.

* It should now be possible to write tuples with more than INT_MAX elements to an NSArchive. Those archives
  cannot be read back by older versions of PyObjC (or python running in 32-bit mode), but archives that 
  contain only smaller tuples can be read back by earlier versions.

* Issue #38: Struct wrappers and opaque pointer types now implement support for :func:`sys.getsizeof`.

* Opaque pointer objects now have a method "__c_void_p__" that returns a :class:`ctypes.void_p` for
  the same pointer.


Version 2.6
-----------

.. note::

   This is version currently in development and has not been released yet

Version 2.5.1
-------------

- PyObjC could crash when calling a method that is dynamicly generated
  (that is, the selector is not present in the class according to the
  Objective-C runtime but the instance responds to it anyway).

  The cases that used to crash now raise :exc:`objc.error` instead.

  .. note::
     It is highly unlikely that real code would run into this, found
     while working on PyObjC 3.x.

- When writing a python unicode object to an NSArchiver or NSKeyedArchiver
  the object is now stored exactly the same as a normal NSString, and will
  be read back as such.

  This increases interoperability with code that expects to read back a
  non-keyed archive in a different proces. An example of this is the use
  of Growl (see issue #31)

  Instances of subclasses of unicode are not affected by this change, and
  can only be read back by other PyObjC programs.

Version 2.5
-----------

- Add conversion to/from ctypes.c_void_p to proxies for Cocoa objects.

  To use::

     anObject = NSArray.array()
     void_p = anObject.__c_void_p__()
     # use void_p with ctypes

     otherObject = NSObject(c_void_p=voip_p)
     assert anObject is otherObject

  Note that it is save to contruct the python proxy from NSObject,