@@ -79,7 +79,13 @@ Version 3.0
   cannot be read back by older versions of PyObjC (or python running in 32-bit mode), but archives that 
   contain only smaller tuples can be read back by earlier versions.
 
-* Issue #38: Struct wrappers and opaque pointer types now implement support for :func:`sys.getsizeof`.
+* Issue #38: Struct wrappers and opaque pointer types now implement support for :func:`sys.getsizeof`,
+  as do :class:`objc.FSRef`, :class:`objc.FSSpec`, and Objective-C classes.
+
+  The size of Objective-C instances is not entirely correct, and cannot be. The :func:`sizeof <sys.sizeof>` function
+  only reports the size of the proxy object and the basic size of the Objective-C object. It does not
+  report additional buffers used by the object, which for example means that a too low size is reported
+  for Cocoa containers like NSArray.
 
 * Opaque pointer objects now have a method "__c_void_p__" that returns a :class:`ctypes.void_p` for
   the same pointer.
